<resources>
    <string name="app_name">Nhóm Thế Anh</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_favorite">Yêu thích</string>
    <string name="nav_history">Lịch sử</string>
    <string name="nav_proflie">Tài khoản</string>
    <string name="nav_login">Đăng Xuất</string>
    <string name="nav_changePassword">Đổi mật khẩu</string>
    <string name="nav_acount">Tài khoản</string>
    <string name="map_api_key">AIzaSyBAWjpoy7aqTtv5vlI92daianY7qC2iJsw</string>


    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
</resources>